k8s/webapi-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi-deployment
  template:
    metadata:
      labels:
        app: webapi-deployment
    spec:
      containers:
        - name: webapi
          image: acrdatapumppudevwesteurope.azurecr.io/webapi:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            periodSeconds: 3
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
spec:
  selector:
    app: webapi-deployment
  ports:
    - port: 80
      targetPort: 8080
